k8s/apps/10-plane-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plane-beat
  namespace: plane
  labels:
    app.kubernetes.io/name: plane-beat
    app.kubernetes.io/part-of: plane
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: plane-beat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plane-beat
    spec:
      containers:
        - name: beat
          image: ghcr.io/volt-shared/volt-plane-backend:build-5
          command: ["./bin/docker-entrypoint-beat.sh"]
